# Kolbot-Modernization

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: areas.json  items.json  npcs.json  skills.json
kolbot/: __init__.py  __main__.py  cli.py
kolbot/bot/: __init__.py  autoplay.py  chicken.py  combat.py  pathing.py  pickit.py  town_manager.py
kolbot/config/: __init__.py  hot_reload.py  profile.py  settings.py
kolbot/core/: __init__.py  game_state.py  memory.py  offsets.py  packets.py  process.py  structures.py
kolbot/game/: __init__.py  belt.py  inventory.py  items.py  map.py  mercenary.py  monsters.py  npcs.py  player.py  skills.py  town.py
kolbot/gui/: __init__.py  app.py
kolbot/multi/: __init__.py  instance_manager.py
kolbot/scripts/: __init__.py  api.py  engine.py  transpiler.py
kolbot/utils/: __init__.py  helpers.py  logger.py
scripts/: example_autoplay.py  example_pickit.py
