[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "kolbot-python"
version = "1.0.0"
description = "Modern Python Kolbot for Diablo II LoD 1.14d"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Kolbot-Python Contributors"}
]

dependencies = [
    "dearpygui>=1.11",
    "psutil>=5.9",
    "watchdog>=3.0",
    "pydantic>=2.5",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "mypy>=1.7",
]

[project.scripts]
kolbot = "kolbot.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kolbot*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
